# ShamikoX

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/aidl/yangFenTuoZi/shamikox/server/: IService.aidl
app/src/main/cpp/: CMakeLists.txt  daemon.cpp  daemon.h  global.cpp  global.h  logger.cpp  logger.h  server.cpp  server.h
app/src/main/java/yangFenTuoZi/shamikox/: App.java  MainActivity.java
app/src/main/res/drawable/: baseline_format_list_bulleted_24.xml  baseline_numbers_24.xml  ic_delete_24.xml  ic_home_24.xml  ic_notifications_24.xml  ic_settings_24.xml
app/src/main/res/layout/: activity_main.xml  dialog_exec.xml  dialog_request_root.xml  fragment_home.xml  fragment_settings.xml  fragment_superuser.xml  item_policy.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
packageViewer/: build.gradle
packageViewer/src/main/: AndroidManifest.xml
packageViewer/src/main/res/layout/: activity_package_viewer.xml  dialog_appinfo_detail.xml  dialog_loading.xml  item_app_info.xml  item_app_info_detail.xml
packageViewer/src/main/res/menu/: menu_app_list.xml
packageViewer/src/main/res/values/: strings.xml
packageViewer/src/main/res/values-zh-rCN/: strings.xml
(+30 files in other folders)
